# Shadow

./: .gitignore
assignment_4/: CMakeLists.txt  package.xml
assignment_4/launch/: start_assignment_4.launch
assignment_4/src/: bounding_boxes.hpp  image_converter.cpp  mog.hpp  motion_mode_keyboard.cpp  motion_node.cpp  oflow.hpp  rawfeed.hpp
assignment_4/srv/: MvK.srv
assignment_5/: CMakeLists.txt
assignment_5/launch/: start_assignment_5_bbb.launch  start_assignment_5_laptop.launch
assignment_5/src/: create_controller.cpp  port_stuff.h
assignment_5/srv/: SerialComm.srv
robot_follower/: CMakeLists.txt  package.xml  setup.py
robot_follower/launch/: start_face_detector.launch
robot_follower/msg/: all_faces.msg
robot_follower/src/: .image_converter.cpp.swp  face_node.py  get_tf.py
screenshots/: README
team_assignment_5/: README  package.xml
team_assignment_5/src/: create_driver.cpp
