<?xml version="1.0"?>
<package>
  <name>team_assignment_5</name>
  <version>1.0.0</version>
  <description>The team_assignment_5 package</description>

  <maintainer email="kkhandwala@ucsd.edu">Kandarp S. Khandwala</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <run_depend>message_runtime</run_depend>

  <export>
  </export>
</package>
